--- a/index.html
+++ b/index.html
@@ -2,34 +2,32 @@
 <html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task List</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Task List</title>
 </head>
 
 <body>
-    <header>
-        <p>minha task list</p>
-    </header>
+  <header>
+    <p>Minha Task List</p>
+  </header>
 
-    <main>
-        <form class="form-task">
-            <input type="text" name="task" id="task" placeholder="qual será sua nova tarefa??">
-            <button id="adicionar">ADICIONAR</button>
-        </form>
-        <table class="form-task-list">
-            <tr>
-                <td class="tasklist"></td>
-            </tr>
-        </table>
+  <main>
+    <section class="tasklist">
+      <form class="tasklist__form">
+        <input type="text" name="input-task" class="input-task" placeholder="Qual será sua nova tarefa??" />
+        <button class="add-task">ADICIONAR</button>
+      </form>
+      <table class="tasklist__table">
+        <tr>
+        </tr>
+      </table>
+    </section>
+  </main>
 
-    </main>
+  <footer></footer>
 
-    <footer>
-
-    </footer>
-
-    <script src="assets/js/form-task.js"></script>
+  <script src="assets/js/form-task.js"></script>
 </body>
 
 </html>
