update function add task

--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 
   <main>
     <section class="tasklist">
-      <form class="tasklist__form">
+      <form class="tasklist__new">
         <input type="text" name="input-task" class="input-task" placeholder="Qual será sua nova tarefa??" />
-        <button class="add-task">ADICIONAR</button>
+        <button type="button" class="add-task">ADICIONAR</button>
       </form>
-      <table class="tasklist__table">
-        <tr>
-        </tr>
-      </table>
+      <div class="tasklist__container">
+        
+      </div>
     </section>
   </main>
 
