add function completed and delete task

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="assets/css/style.css">
   <title>Task List</title>
 </head>
 
@@ -18,15 +19,13 @@
         <input type="text" name="input-task" class="input-task" placeholder="Qual será sua nova tarefa??" />
         <button type="button" class="add-task">ADICIONAR</button>
       </form>
-      <div class="tasklist__container">
-        
-      </div>
+      <div class="tasklist__container"></div>
     </section>
   </main>
 
   <footer></footer>
 
-  <script src="assets/js/form-task.js"></script>
+  <script src="assets/js/add-task.js"></script>
 </body>
 
 </html>
