--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,600;1,400&display=swap"
+    rel="stylesheet">
+  <script src="https://kit.fontawesome.com/fab8337305.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="assets/css/header.css">
+  <link rel="stylesheet" href="assets/css/footer.css">
+  <link rel="stylesheet" href="assets/css/main.css">
   <title>Task List</title>
 </head>
 
@@ -16,14 +23,16 @@
   <main>
     <section class="tasklist">
       <form class="tasklist__new">
-        <input type="text" name="input-task" class="input-task" placeholder="Qual será sua nova tarefa??" />
+        <input type="text" name="input-task" class="input-task" placeholder="Qual será sua nova tarefa?" />
         <button type="button" class="add-task">ADICIONAR</button>
       </form>
       <div class="tasklist__container"></div>
     </section>
   </main>
 
-  <footer></footer>
+  <footer>
+    <p>Desenvolvido por <a href="https://github.com/mmoraisjr">Marcos Morais</a></p>
+  </footer>
 
   <script src="assets/js/add-task.js"></script>
 </body>
