--- a/index.html
+++ b/index.html
@@ -30,7 +30,12 @@
   </main>
 
   <footer>
-    <p>Desenvolvido por <a href="https://github.com/mmoraisjr">Marcos Morais</a></p>
+    <a href="https://www.linkedin.com/in/antonio-marcos-de-morais-jr/">
+      <i class="fa-brands fa-linkedin-in"> </i>
+    </a>
+    <a href="https://github.com/mmoraisjr">
+        <i class="fa-brands fa-square-github"></i>
+    </a>
   </footer>
 
   <script src="https://kit.fontawesome.com/fab8337305.js" crossorigin="anonymous"></script>
